@@ -31,6 +31,7 @@ extern int profile_active;
 
 void profile_start( void );
 void profile_map( libspectrum_word pc );
+void profile_frame( libspectrum_dword frame_length );
 void profile_finish( const char *filename );
 
 #endif			/* #ifndef FUSE_PROFILE_H */
