@@ -35,6 +35,7 @@
 #include "machine.h"
 #include "memory.h"
 #include "printer.h"
+#include "profile.h"
 #include "rzx.h"
 #include "settings.h"
 #include "sound.h"
@@ -80,6 +81,7 @@ spectrum_frame( void )
   if( sound_enabled ) sound_frame();
 
   if( display_frame() ) return 1;
+  if( profile_active ) profile_frame( frame_length );
   printer_frame();
 
   /* Add an interrupt unless they're being generated by .rzx playback */
